objects/SalesPipeline__c.object
<CustomObject>
    <customHelpPage>SalesPL_Help</customHelpPage>
    <fields>
        <fullName>Account_X9__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>9桁取引先が特定できる場合は入力して下さい。</inlineHelpText>
        <label>9桁取引先</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.NineDigitAccountDisplay__c</field>
                <operation>equals</operation>
                <value>★★★</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>営業パイプライン (9桁取引先)</relationshipLabel>
        <relationshipName>SalesplKTZq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[その他]取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>営業パイプライン (取引先)</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <label>[その他]追加情報-備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apply__c</fullName>
        <formula>text(Shohin__r.Apply__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>適用</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <label>[その他]商談の背景</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Biko_Att__c</fullName>
        <label>備考(ATT)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Biko_Shodan__c</fullName>
        <label>備考（商談）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Busho__c</fullName>
        <label>[部署(テキスト)]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <description>JRI</description>
        <formula>JishaPrice__c + TaiTorihikiNebikigaku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[その他]CIF価格</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Camera__c</fullName>
        <inlineHelpText>Asia</inlineHelpText>
        <label>Camera</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CarryingDate__c</fullName>
        <label>[その他]搬入納期（営業要求）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CheckCanister__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]キャニスター</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckCryogenic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]クライオジェニック</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckDI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]DI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckHS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]HS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]その他</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckPAL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]PAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckPT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]P/T</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckPY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]Py</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]TD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckTG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]TG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closing_date__c</fullName>
        <label>[その他]受注（1番）予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>商社名</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyParticipation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]商社関与</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competing_situation__c</fullName>
        <label>[その他]競合状況-備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompetitionPresentationProduct__c</fullName>
        <label>[その他]競合提示製品</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>[その他]競合相手</label>
        <picklist>
            <picklistValues>
                <fullName>Agilent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitors_offer__c</fullName>
        <label>競合提示金額</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractDeliveryDate__c</fullName>
        <label>[その他]契約納期（営業要求）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country1__c</fullName>
        <formula>case (CountryName__c
,&quot;AFG&quot;,&quot;AFGHANISTAN&quot;
,&quot;AGO&quot;,&quot;ANGOLA&quot;
,&quot;ALB&quot;,&quot;ALBANIA&quot;
,&quot;AND&quot;,&quot;ANDORRA&quot;
,&quot;ARE&quot;,&quot;U.ARAB EMIRATES&quot;
,&quot;ARG&quot;,&quot;ARGENTINA&quot;
,&quot;ARM&quot;,&quot;ARMYANIA&quot;
,&quot;AUS&quot;,&quot;AUSTRALIA&quot;
,&quot;AUT&quot;,&quot;AUSTRIA&quot;
,&quot;AZE&quot;,&quot;AZERBAIJAN&quot;
,&quot;BDI&quot;,&quot;BURUNDI&quot;
,&quot;BEL&quot;,&quot;BELGIUM&quot;
,&quot;BEN&quot;,&quot;BENIN(DAHOMEY)&quot;
,&quot;BGD&quot;,&quot;BANGLADESH&quot;
,&quot;BGR&quot;,&quot;BULGARIA&quot;
,&quot;BHR&quot;,&quot;BAHRAIN&quot;
,&quot;BHS&quot;,&quot;BAHAMAS&quot;
,&quot;BIH&quot;,&quot;BOSNIA &amp; HERZEGOVINA&quot;
,&quot;BLR&quot;,&quot;BELARUS&quot;
,&quot;BOL&quot;,&quot;BOLIVIA&quot;
,&quot;BRA&quot;,&quot;BRAZIL&quot;
,&quot;BRB&quot;,&quot;BARBADOS&quot;
,&quot;BRN&quot;,&quot;BRUNEI&quot;
,&quot;BTN&quot;,&quot;BHUTAN&quot;
,&quot;BWA&quot;,&quot;BOTSWANA&quot;
,&quot;CAF&quot;,&quot;CENTRAL AFRICA&quot;
,&quot;CAN&quot;,&quot;CANADA&quot;
,&quot;CHE&quot;,&quot;SWITZERLAND&quot;
,&quot;CHL&quot;,&quot;CHILE&quot;
,&quot;CHN&quot;,&quot;CHINA&quot;
,&quot;CIV&quot;,&quot;COTE DIVOIRE&quot;
,&quot;CMR&quot;,&quot;CAMEROUN&quot;
,&quot;COG&quot;,&quot;CONGO&quot;
,&quot;COL&quot;,&quot;COLOMBIA&quot;
,&quot;COM&quot;,&quot;COMORO&quot;
,&quot;CPV&quot;,&quot;CABO VERDE&quot;
,&quot;CRI&quot;,&quot;COSTA RICA&quot;
,&quot;CSK&quot;,&quot;C.S.F.R&quot;
,&quot;CUB&quot;,&quot;CUBA&quot;
,&quot;CYP&quot;,&quot;CYPRUS&quot;
,&quot;CZE&quot;,&quot;CZECH&quot;
,&quot;DDR&quot;,&quot;EAST GERMANY&quot;
,&quot;DEU&quot;,&quot;GERMANY&quot;
,&quot;DJI&quot;,&quot;DJIBOUTI&quot;
,&quot;DNK&quot;,&quot;DENMARK&quot;
,&quot;DOM&quot;,&quot;DOMINICA&quot;
,&quot;DZA&quot;,&quot;ALGERIA&quot;
,&quot;ECU&quot;,&quot;ECUADOR&quot;
,&quot;EGY&quot;,&quot;EGYPT&quot;
,&quot;ERI&quot;,&quot;STATE OF ERITREA&quot;
,&quot;ESP&quot;,&quot;SPAIN&quot;
,&quot;EST&quot;,&quot;ESTONIA&quot;
,&quot;ETH&quot;,&quot;ETHIOPIA&quot;
,&quot;FIN&quot;,&quot;FINLAND&quot;
,&quot;FJI&quot;,&quot;FIJI&quot;
,&quot;FRA&quot;,&quot;FRANCE&quot;
,&quot;GAB&quot;,&quot;GABON&quot;
,&quot;GBR&quot;,&quot;U.K.&quot;
,&quot;GEO&quot;,&quot;GEORGIA&quot;
,&quot;GHA&quot;,&quot;GHANA&quot;
,&quot;GIN&quot;,&quot;GUINEA&quot;
,&quot;GMB&quot;,&quot;GAMBIA&quot;
,&quot;GNB&quot;,&quot;GUINEA-BISSAU&quot;
,&quot;GNQ&quot;,&quot;EQUATORIAL GUINEA&quot;
,&quot;GRC&quot;,&quot;GREECE&quot;
,&quot;GRD&quot;,&quot;GRENADA&quot;
,&quot;GTM&quot;,&quot;GUATEMALA&quot;
,&quot;GUY&quot;,&quot;GUYANA&quot;
,&quot;HKG&quot;,&quot;HONG KONG&quot;
,&quot;HND&quot;,&quot;HONDURAS&quot;
,&quot;HRV&quot;,&quot;CROATIA&quot;
,&quot;HTI&quot;,&quot;HAITI&quot;
,&quot;HUN&quot;,&quot;HUNGARY&quot;
,&quot;HVO&quot;,&quot;HAUTE VOLTA&quot;
,&quot;IDN&quot;,&quot;INDONESIA&quot;
,&quot;IND&quot;,&quot;INDIA&quot;
,&quot;IRL&quot;,&quot;IRELAND(EIRE)&quot;
,&quot;IRN&quot;,&quot;IRAN&quot;
,&quot;IRQ&quot;,&quot;IRAQ&quot;
,&quot;ISL&quot;,&quot;ICELAND&quot;
,&quot;ISR&quot;,&quot;ISRAEL&quot;
,&quot;ITA&quot;,&quot;ITALY&quot;
,&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>国1_数式</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country2__c</fullName>
        <formula>CASE( CountryName__c 
,&quot;JAM&quot;,&quot;JAMAICA&quot;
,&quot;JOR&quot;,&quot;JORDAN&quot;
,&quot;JPN&quot;,&quot;JAPAN&quot;
,&quot;KAZ&quot;,&quot;KAZAKHSTAN&quot;
,&quot;KEN&quot;,&quot;KENYA&quot;
,&quot;KGZ&quot;,&quot;KIRGIZSTAN&quot;
,&quot;KHM&quot;,&quot;CAMBODIA&quot;
,&quot;KOR&quot;,&quot;KOREA&quot;
,&quot;KWT&quot;,&quot;KUWAIT&quot;
,&quot;LAO&quot;,&quot;LAOS&quot;
,&quot;LBN&quot;,&quot;LEBANON&quot;
,&quot;LBR&quot;,&quot;LIBERIA&quot;
,&quot;LBY&quot;,&quot;LIBYAN ARAB&quot;
,&quot;LIE&quot;,&quot;LIECHTENSTEIN&quot;
,&quot;LKA&quot;,&quot;SRI LANKA&quot;
,&quot;LSO&quot;,&quot;LESOTHO&quot;
,&quot;LTU&quot;,&quot;LITHUANIA&quot;
,&quot;LUX&quot;,&quot;LUXEMBOURG&quot;
,&quot;LVA&quot;,&quot;LATVIA&quot;
,&quot;MAC&quot;,&quot;MACAO&quot;
,&quot;MAR&quot;,&quot;MOROCCO&quot;
,&quot;MCO&quot;,&quot;MONACO&quot;
,&quot;MDA&quot;,&quot;MOLDAVIA&quot;
,&quot;MDG&quot;,&quot;MALGACHE(MADAGASCAR)&quot;
,&quot;MDV&quot;,&quot;MALDIVES&quot;
,&quot;MEX&quot;,&quot;MEXICO&quot;
,&quot;MHL&quot;,&quot;Republic of theMarshallIslands&quot;
,&quot;MKD&quot;,&quot;MACEDONIA&quot;
,&quot;MLI&quot;,&quot;MALI&quot;
,&quot;MLT&quot;,&quot;MALTA&quot;
,&quot;MMR&quot;,&quot;MYANMAR&quot;
,&quot;MNE&quot;,&quot;MONTENEGRO&quot;
,&quot;MNG&quot;,&quot;MONGOLIA&quot;
,&quot;MOZ&quot;,&quot;MOZAMBIQUE&quot;
,&quot;MRT&quot;,&quot;MAURITANIA&quot;
,&quot;MUS&quot;,&quot;MAURITIUS&quot;
,&quot;MWI&quot;,&quot;MALAWI&quot;
,&quot;MYS&quot;,&quot;MALAYSIA&quot;
,&quot;NAM&quot;,&quot;NAMIBIA&quot;
,&quot;NER&quot;,&quot;NIGER&quot;
,&quot;NGA&quot;,&quot;NIGERIA&quot;
,&quot;NIC&quot;,&quot;NICARAGUA&quot;
,&quot;NLD&quot;,&quot;NETHERLANDS&quot;
,&quot;NOR&quot;,&quot;NORWAY&quot;
,&quot;NPL&quot;,&quot;NEPAL&quot;
,&quot;NRU&quot;,&quot;NAURU&quot;
,&quot;NZL&quot;,&quot;NEW ZEALAND&quot;
,&quot;OMN&quot;,&quot;OMAN&quot;
,&quot;PAK&quot;,&quot;PAKISTAN&quot;
,&quot;PAN&quot;,&quot;PANAMA&quot;
,&quot;PER&quot;,&quot;PERU&quot;
,&quot;PHL&quot;,&quot;PHILIPPINES&quot;
,&quot;PNG&quot;,&quot;PAPUA NEW GUINEA&quot;
,&quot;POL&quot;,&quot;POLAND&quot;
,&quot;PRK&quot;,&quot;N.KOREA&quot;
,&quot;PRT&quot;,&quot;PORTUGAL&quot;
,&quot;PRY&quot;,&quot;PARAGUAY&quot;
,&quot;PSE&quot;,&quot;PALESTINE&quot;
,&quot;QAT&quot;,&quot;QATAR&quot;
,&quot;RHO&quot;,&quot;RHODESIA&quot;
,&quot;ROU&quot;,&quot;ROMANIA&quot;
,&quot;RUS&quot;,&quot;RUSSIA&quot;
,&quot;RWA&quot;,&quot;RWANDA&quot;
,&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>国2_数式</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country3__c</fullName>
        <formula>case( CountryName__c 
,&quot;SAM&quot;,&quot;SAMOA&quot;
,&quot;SAU&quot;,&quot;SAUDI ARABIA&quot;
,&quot;SCG&quot;,&quot;SERBIA &amp; MONTENEGRO&quot;
,&quot;SDN&quot;,&quot;SUDAN&quot;
,&quot;SEN&quot;,&quot;SENEGAL&quot;
,&quot;SGP&quot;,&quot;SINGAPORE&quot;
,&quot;SLE&quot;,&quot;SIERRA LEONE&quot;
,&quot;SLV&quot;,&quot;EL SALVADOR&quot;
,&quot;SMR&quot;,&quot;SAN MARINO&quot;
,&quot;SOM&quot;,&quot;SOMALIA&quot;
,&quot;SRB&quot;,&quot;SERBIA&quot;
,&quot;STP&quot;,&quot;SAO TOME ET PRINCIPE&quot;
,&quot;SUN&quot;,&quot;USSR&quot;
,&quot;SUR&quot;,&quot;SURINAME&quot;
,&quot;SVK&quot;,&quot;SLOVAKIA&quot;
,&quot;SVN&quot;,&quot;SLOVENIA&quot;
,&quot;SWE&quot;,&quot;SWEDEN&quot;
,&quot;SWZ&quot;,&quot;SWAZILAND&quot;
,&quot;SYC&quot;,&quot;SEYCHELLES&quot;
,&quot;SYR&quot;,&quot;SYRIAN ARAB&quot;
,&quot;TCD&quot;,&quot;CHAD(TCHAD)&quot;
,&quot;TGO&quot;,&quot;TOGO&quot;
,&quot;THA&quot;,&quot;THAILAND&quot;
,&quot;TJK&quot;,&quot;TADZHIKSTAN&quot;
,&quot;TKM&quot;,&quot;TURKMENISTAN&quot;
,&quot;TON&quot;,&quot;TONGA&quot;
,&quot;TTO&quot;,&quot;TRINIDADO TOBAGO&quot;
,&quot;TUN&quot;,&quot;TUNISIA&quot;
,&quot;TUR&quot;,&quot;TURKEY&quot;
,&quot;TWN&quot;,&quot;TAIWAN&quot;
,&quot;TZA&quot;,&quot;TANZANIA&quot;
,&quot;UGA&quot;,&quot;UGANDA&quot;
,&quot;UKR&quot;,&quot;UKRAINE&quot;
,&quot;URY&quot;,&quot;URUGUAY&quot;
,&quot;USA&quot;,&quot;USA&quot;
,&quot;UZB&quot;,&quot;UZBEKISTAN&quot;
,&quot;VAT&quot;,&quot;VATICAN&quot;
,&quot;VEN&quot;,&quot;VENEZUELA&quot;
,&quot;VNM&quot;,&quot;VIET-NAM&quot;
,&quot;WSM&quot;,&quot;WESTERN SAMOA&quot;
,&quot;YEM&quot;,&quot;YEMEN ARAB&quot;
,&quot;YUG&quot;,&quot;YUGOSLAVIA&quot;
,&quot;ZAF&quot;,&quot;S.AFRICA&quot;
,&quot;ZAR&quot;,&quot;ZAIRE&quot;
,&quot;ZMB&quot;,&quot;ZAMBIA&quot;
,&quot;ZWE&quot;,&quot;ZIMBABWE&quot;
,&quot;ZZZ&quot;,&quot;名称　不明&quot;
,&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>国3_数式</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryNamePicklist__c</fullName>
        <label>国</label>
        <picklist>
            <controllingField>Kokunai_Kaigai__c</controllingField>
            <picklistValues>
                <fullName>AFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>[国]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateFormula__c</fullName>
        <formula>Datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[登録日（未使用？）]</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>登録日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrencyCopy__c</fullName>
        <formula>text(CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>通貨（数式)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[Currency]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAccountCode__c</fullName>
        <formula>CustomerAccount__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>顧客コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAccountNameFormula__c</fullName>
        <formula>IF ( CustomerAccount__c == NULL,  CustomerAccountNameInput__c ,  CustomerAccount__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>顧客名称（数式）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAccountNameInput__c</fullName>
        <label>顧客名称（テキスト）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>納入先を定義。営業PL(新)で選択する顧客は基本的に取引先の状況=有効データを選択して下さい。</inlineHelpText>
        <label>営業PL(新)－顧客名称</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <infoMessage>取引先の状況=有効　データを選択して下さい。</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>営業パイプライン (営業PL(新)－顧客名称)</relationshipLabel>
        <relationshipName>SalesPipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerResponsibleWinLoss__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客先担当者(勝敗因用)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CustomerResponsibleWinLoss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerResponsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SalesPipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_price_local_cur__c</fullName>
        <label>[その他]受注予定金額</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_price_yen__c</fullName>
        <formula>case(CurrencyIsoCode,
&quot;USD&quot;,80,
&quot;EUR&quot;,105,
&quot;GBP&quot;,128,
&quot;SGD&quot;,66,
&quot;JPY&quot;,1,
0)

*

Deal_price_local_cur__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[その他]受注予定金額（円建て）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DecisionModel__c</fullName>
        <label>競合・決定機種</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DeliveryYear__c</fullName>
        <label>[その他]納入年</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_deadline_export__c</fullName>
        <label>海外現地搬入納期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DepartmentPicklist__c</fullName>
        <label>部署</label>
        <picklist>
            <picklistValues>
                <fullName>S0101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0131</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0141</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0151</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0161</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0171</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0181</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0191</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1X10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1X20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1X30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1X40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GR1947</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1X20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2S30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R0191</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R1X10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R0161</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R0181</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R0131</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R7500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R0121</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>[部署]</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>営業パイプライン</relationshipLabel>
        <relationshipName>Department</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>仕向地（海外）</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceName__c</fullName>
        <label>[その他]装置名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountRate__c</fullName>
        <label>[その他]値引率</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_rate__c</fullName>
        <formula>TaiTorihikiNebikigaku__c /  (JishaPrice__c + TaiTorihikiNebikigaku__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>値引き率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Disposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]廃棄</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDS__c</fullName>
        <inlineHelpText>Asia</inlineHelpText>
        <label>EDS</label>
        <picklist>
            <picklistValues>
                <fullName>JED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EigyoTantoshaMain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業担当</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesPipelineMain</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EigyoTantoshaSales__c</fullName>
        <formula>if (SalesOrderLkup__r.SalesStaff__c =null,  EigyoTantoshaMain__r.LastName &amp;&quot; &quot; &amp;  EigyoTantoshaMain__r.FirstName ,SalesOrderLkup__r.SalesStaff__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>営業担当者(販売オーダ)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EigyoTantoshaSub__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[その他]営業担当（サブ）</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesPipelineSub</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>G長コメント欄</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <formula>CASE(text( RegionNamePicklist__c )
,&apos;010&apos;,&apos;010&apos;
,&apos;011&apos;,&apos;011&apos;
,&apos;012&apos;,&apos;012&apos;
,&apos;013&apos;,&apos;013&apos;
,&apos;014&apos;,&apos;014&apos;
,&apos;015&apos;,&apos;015&apos;
,&apos;016&apos;,&apos;016&apos;
,&apos;017&apos;,&apos;017&apos;
,&apos;018&apos;,&apos;018&apos;
,&apos;019&apos;,&apos;019&apos;
,&apos;01A&apos;,&apos;01A&apos;
,&apos;01B&apos;,&apos;01B&apos;
,&apos;020&apos;,&apos;020&apos;
,&apos;021&apos;,&apos;021&apos;
,&apos;022&apos;,&apos;022&apos;
,&apos;023&apos;,&apos;023&apos;
,&apos;024&apos;,&apos;024&apos;
,&apos;025&apos;,&apos;025&apos;
,&apos;026&apos;,&apos;026&apos;
,&apos;027&apos;,&apos;027&apos;
,&apos;028&apos;,&apos;028&apos;
,&apos;029&apos;,&apos;029&apos;
,&apos;030&apos;,&apos;030&apos;
,&apos;031&apos;,&apos;031&apos;
,&apos;034&apos;,&apos;034&apos;
,&apos;035&apos;,&apos;035&apos;
,&apos;039&apos;,&apos;039&apos;
,&apos;0Z1&apos;,&apos;0Z1&apos;
,&apos;100&apos;,&apos;100&apos;
,&apos;111&apos;,&apos;111&apos;
,&apos;113&apos;,&apos;113&apos;
,&apos;114&apos;,&apos;114&apos;
,&apos;115&apos;,&apos;115&apos;
,&apos;116&apos;,&apos;116&apos;
,&apos;118&apos;,&apos;118&apos;
,&apos;121&apos;,&apos;121&apos;
,&apos;122&apos;,&apos;122&apos;
,&apos;123&apos;,&apos;123&apos;
,&apos;124&apos;,&apos;124&apos;
,&apos;125&apos;,&apos;125&apos;
,&apos;126&apos;,&apos;126&apos;
,&apos;128&apos;,&apos;128&apos;
,&apos;129&apos;,&apos;129&apos;
,&apos;131&apos;,&apos;131&apos;
,&apos;142&apos;,&apos;142&apos;
,&apos;151&apos;,&apos;151&apos;
,&apos;152&apos;,&apos;152&apos;
,&apos;153&apos;,&apos;153&apos;
,&apos;154&apos;,&apos;154&apos;
,&apos;161&apos;,&apos;161&apos;
,&apos;172&apos;,&apos;172&apos;
,&apos;173&apos;,&apos;173&apos;
,&apos;177&apos;,&apos;177&apos;
,&apos;179&apos;,&apos;179&apos;
,&apos;211&apos;,&apos;211&apos;
,&apos;212&apos;,&apos;212&apos;
,&apos;221&apos;,&apos;221&apos;
,&apos;222&apos;,&apos;222&apos;
,&apos;223&apos;,&apos;223&apos;
,&apos;224&apos;,&apos;224&apos;
,&apos;225&apos;,&apos;225&apos;
,&apos;226&apos;,&apos;226&apos;
,&apos;227&apos;,&apos;227&apos;
,&apos;228&apos;,&apos;228&apos;
,&apos;6Z1&apos;,&apos;6Z1&apos;
,&apos;710&apos;,&apos;710&apos;
,&apos;900&apos;,&apos;900&apos;
,&apos;950&apos;,&apos;950&apos;
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>地域コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <formula>if (isblank( ReceiveMonthGroupTop__c ) ,null,
Datevalue(LEFT(ReceiveMonthGroupTop__c  , 4) &amp; &quot;-&quot; &amp; MID(ReceiveMonthGroupTop__c , 5, 2) &amp; &quot;-&quot; &amp; &quot;01&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受注月（グループ長）_yyyymmddd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field26_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>受注見込</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FutureMaintenanceContract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]将来の保守契約の有無</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GakubuText__c</fullName>
        <label>学部・事業所（テキスト）</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gen__c</fullName>
        <formula>Shohin__r.General_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>統一機種名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupTopKakunin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[その他]グループ長確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HKBNTEXT__c</fullName>
        <label>本体区分(テキスト)</label>
        <picklist>
            <picklistValues>
                <fullName>本体</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>リユース</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>貸与</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>保守</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HonbuBiko__c</fullName>
        <label>[その他]本部備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HonbuKakunin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>本部確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HontaiDivision__c</fullName>
        <formula>TEXT(Shohin__r.Division__c) == &apos;製品&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[本体区分(旧)]</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HontaiNotPresent__c</fullName>
        <label>[その他]本体無の場合</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ichiban_date__c</fullName>
        <label>[その他]正注日(BAAN)から</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ItemName__c</fullName>
        <formula>Shohin__r.JapaneseName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>品目名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JishaPrice__c</fullName>
        <label>自社金額</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JuchuKakudoValue__c</fullName>
        <label>受注確度</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JuchuKakudo__c</fullName>
        <label>[受注確度(A-E)]</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JuchuYoteiTsuki__c</fullName>
        <label>受注予定月</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>